--- a/ProjekatPI/src/main/resources/application-sv.properties
+++ b/ProjekatPI/src/main/resources/application-sv.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1/magacinsko?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/magacinsko
 spring.datasource.username=root
 spring.datasource.password=root
